feat: consolidar autoria autenticada e proteger historico